force-app/core/default/objects/XC_AFCC_Org_Config__c/XC_AFCC_Org_Config__c.object-meta.xml
<CustomObject>
    <label>Org Config</label>
    <nameField>
        <displayFormat>CFG-{000000}</displayFormat>
        <label>XC AFCC Org Config</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>