force-app/core/default/objects/XC_AFCC_Org_Config__c/fields/XC_AFCC_Contract_Credit_Rate__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Contract_Credit_Rate__c</fullName>
    <label>Contract Credit Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>