force-app/core/default/objects/XC_AFCC_Org_Config__c/fields/XC_AFCC_Csv_Import_Enabled__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Csv_Import_Enabled__c</fullName>
    <label>Csv Import Enabled</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>