force-app/core/default/objects/XC_AFCC_Org_Config__c/fields/XC_AFCC_Demo_Override_Enabled__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Demo_Override_Enabled__c</fullName>
    <label>Harness Override Enabled</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>