force-app/core/default/objects/XC_AFCC_Org_Config__c/fields/XC_AFCC_Demo_Override_Expires_On__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Demo_Override_Expires_On__c</fullName>
    <label>Harness Override Expires On</label>
    <type>Date</type>
</CustomField>