force-app/core/default/objects/XC_AFCC_Org_Config__c/fields/XC_AFCC_Demo_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Demo_Override_Reason__c</fullName>
    <label>Harness Override Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>