force-app/core/default/objects/XC_AFCC_Org_Config__c/fields/XC_AFCC_Install_Mode__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Install_Mode__c</fullName>
    <label>Install Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEV</fullName>
            </value>
            <value>
                <fullName>DEMO</fullName>
            </value>
            <value>
                <fullName>TEST</fullName>
            </value>
            <value>
                <fullName>SANDBOX</fullName>
            </value>
            <value>
                <fullName>PRODUCTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>