force-app/core/default/objects/XC_AFCC_Org_Config__c/fields/XC_AFCC_Is_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Is_Sandbox__c</fullName>
    <label>Is Sandbox</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>