force-app/core/default/objects/XC_AFCC_Org_Config__c/fields/XC_AFCC_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Org_Id__c</fullName>
    <label>Org Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>