force-app/core/default/objects/XC_AFCC_Org_Config__c/fields/XC_AFCC_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Org_Name__c</fullName>
    <label>Org Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>